RESOLVED FIXED298674
[iOS] VTDecompressionSession is not torn down when app is backgrounded
https://bugs.webkit.org/show_bug.cgi?id=298674
Summary [iOS] VTDecompressionSession is not torn down when app is backgrounded
Jer Noble
Reported 2025-09-10 12:40:35 PDT
[iOS] VTDecompressionSession is not torn down when app is backgrounded
Attachments
Jer Noble
Comment 1 2025-09-10 12:40:36 PDT
Jer Noble
Comment 2 2025-09-10 12:45:39 PDT
EWS
Comment 3 2025-09-11 01:10:02 PDT
Committed 299841@main (7707a5ea4ea4): <https://commits.webkit.org/299841@main> Reviewed commits have been landed. Closing PR #50558 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.