[iOS] VTDecompressionSession is not torn down when app is backgrounded rdar://157599848 https://bugs.webkit.org/show_bug.cgi?id=298674

Reviewed by Jean-Yves Avenard and Youenn Fablet.

When the MediaSourcePrefersDecompressionSession preference is enabled, a VTDecompressionSession is
created and used to decode video frames before enqueueing them for display. However this decompression
session is not torn down when the app moves to the background state, unlike the decompression session
used internally in AVSampleBufferDisplayLayer. This causes various system processes to use more memory
in this state, keeping server-side objects alive and in some cases keeping server processes themselves
from being closed.

For paused players, tear down the decompression session when moving to background; it will be silently
recreated the next time playback begins.

* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::applicationWillResignActive):
* Source/WebCore/platform/graphics/cocoa/VideoMediaSampleRenderer.h:
* Source/WebCore/platform/graphics/cocoa/VideoMediaSampleRenderer.mm:
(WebCore::VideoMediaSampleRenderer::invalidateDecompressionSession):

Canonical link: https://commits.webkit.org/299841@main